--- a/_includes/default/css-include.html
+++ b/_includes/default/css-include.html
@@ -38,3 +38,4 @@
 {% endif -%}
 
 <link href="{{ site.baseurl }}/assets/css/nav-media.css" rel="stylesheet">
+<script src="https://kit.fontawesome.com/83845dc243.js" crossorigin="anonymous"></script>
