mobile complex fix

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,6 +16,16 @@ layout: compress
       width: 70%;
     }
 
+    @media screen and (max-width: 1201px) {
+      .block-left {
+        width: 100%;
+      }
+
+      .block-right {
+        width: 100%;
+      }
+    }
+
     a,
     a:link,
     a:visited,
