--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -16,8 +16,14 @@ layout: compress
       width: 70%;
     }
 
-    .section-title {
-      size: 40%;
+    @media screen and (max-width: 1201px) {
+      .block-left {
+        width: 100%;
+      }
+
+      .block-right {
+        width: 100%;
+      }
     }
 
     a,
