--- a/_layouts/114514.html
+++ b/_layouts/114514.html
@@ -14,6 +14,8 @@ layout: compress
 
         .block-right {
             width: 70%;
+            display: table;
+            text-align: center;
         }
 
         @media screen and (max-width: 1201px) {
@@ -68,26 +70,19 @@ layout: compress
                 <div class="main-info">
                     <a href="{{ site.url }}" class="logo"><img src="{{ site.url }}/images/favicons/114514.jpg"></a>
                     <h1>
-                        {{ site.title }}
+                        1 1 4 5 1 4
                     </h1>
                     <h2>
-                        {{ site.description }}
+                        1 9 1 9 8 1 0
                     </h2>
-
-                    <!--TODO buttons-->
-
-                    <a href="{{ site.url }}/posts" title="posts" class="left-to-right">啊啊</a>
-                    <a href="{{ site.url }}/projects" title="projects" class="left-to-right">啊啊</a>
-                    <a href="{{ site.url }}/links" title="links" class="left-to-right">啊啊</a>
-                    <a href="{{ site.url }}/tags" title="tags" class="left-to-right">啊啊</a>
-                    {% include social-links.html %}
                 </div>
             </div>
             <canvas></canvas>
         </div>
         <div class="block-right">
-            <img src="{{ site.url }}/images/114514.jpg">
-
+            <div style="display: table-cell; vertical-align: middle;">
+                <img src="{{ site.url }}/images/114514.jpg">
+            </div>
         </div>
         {% include overlay.html %}
         {% include scripts.html %}
