--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -68,13 +68,18 @@ layout: compress
         <a href="{{ site.url }}" class="logo"><img
             src="{{ site.url }}/images/{{ site.logo | replace: '.', '-small.' }}"></a>
         <!--TODO buttons-->
-        <a href="{{ site.url }}/posts" title="posts" class="left-to-right">文章</a>
-        </br></br></br>
-        <a href="{{ site.url }}/projects" title="projects" class="left-to-right">项目</a>
-        </br></br></br>
-        <a href="{{ site.url }}/links" title="links" class="left-to-right">链接</a>
-        </br></br></br>
-        <a href="{{ site.url }}/tags" title="tags" class="left-to-right">标签</a>
+        <a href="{{ site.url }}/posts" title="posts" class="left-to-right">
+          <i class="fa-solid fa-bookmark"></i>文章
+        </a>
+        <a href="{{ site.url }}/projects" title="projects" class="left-to-right">
+          <i class="fa-solid fa-folder"></i>项目
+        </a>
+        <a href="{{ site.url }}/links" title="links" class="left-to-right">
+          <i class="fa-solid fa-link"></i>链接
+        </a>
+        <a href="{{ site.url }}/tags" title="tags" class="left-to-right">
+          <i class="fa-solid fa-tag"></i>标签
+        </a>
         <h2 class="section-title">{{ page.title }}<em>/</em>
         </h2>
       </div>
