fix font awesome

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -77,16 +77,16 @@ layout: compress
           <!--TODO buttons-->
 
           <a href="{{ site.url }}/posts" title="posts" class="left-to-right">
-            <i class="fa-solid fa-bookmark"></i>文章
+            <i class="fa fa-fw fa-bookmark"></i>文章
           </a>
           <a href="{{ site.url }}/projects" title="projects" class="left-to-right">
-            <i class="fa-solid fa-folder"></i>项目
+            <i class="fa fa-fw fa-folder"></i>项目
           </a>
           <a href="{{ site.url }}/links" title="links" class="left-to-right">
-            <i class="fa-solid fa-link"></i>链接
+            <i class="fa fa-fw fa-link"></i>链接
           </a>
           <a href="{{ site.url }}/tags" title="tags" class="left-to-right">
-            <i class="fa-solid fa-tag"></i>标签
+            <i class="fa fa-fw fa-tag"></i>标签
           </a>
           {% include social-links.html %}
         </div>
