--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -69,16 +69,16 @@ layout: compress
             src="{{ site.url }}/images/{{ site.logo | replace: '.', '-small.' }}"></a>
         <!--TODO buttons-->
         <a href="{{ site.url }}/posts" title="posts" class="left-to-right">
-          <i class="fa-solid fa-bookmark"></i>文章
+          <i class="fa fa-fw fa-bookmark"></i>文章
         </a>
         <a href="{{ site.url }}/projects" title="projects" class="left-to-right">
-          <i class="fa-solid fa-folder"></i>项目
+          <i class="fa fa-fw fa-folder"></i>项目
         </a>
         <a href="{{ site.url }}/links" title="links" class="left-to-right">
-          <i class="fa-solid fa-link"></i>链接
+          <i class="fa fa-fw fa-link"></i>链接
         </a>
         <a href="{{ site.url }}/tags" title="tags" class="left-to-right">
-          <i class="fa-solid fa-tag"></i>标签
+          <i class="fa fa-fw fa-tag"></i>标签
         </a>
         <h2 class="section-title">{{ page.title }}<em>/</em>
         </h2>
