--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -31,6 +31,7 @@ layout: compress
 
   .left-to-right {
     position: relative;
+    color: #64abe8;
   }
 
   /* TODO color fix */
@@ -56,6 +57,7 @@ layout: compress
     height: 100%;
     border: 10px solid rgb(188, 173, 173);
   }
+  
 </style>
 
 <!DOCTYPE html>
@@ -68,16 +70,16 @@ layout: compress
     <div class="block-left">
       <div class="content">
         <a href="{{ site.url }}" class="logo"><img src="{{ site.url }}/images/{{ site.logo }}"></a>
-        <a href="{{ site.url }}/posts" title="posts" class="left-to-right">
+        <a href="{{ site.url }}/posts" title="posts" class="left-to-right" style="color: #64abe8;">
           <i class="fa fa-fw fa-bookmark"></i>文章
         </a>
-        <a href="{{ site.url }}/projects" title="projects" class="left-to-right">
+        <a href="{{ site.url }}/projects" title="projects" class="left-to-right" style="color: #64abe8;">
           <i class="fa fa-fw fa-folder"></i>项目
         </a>
-        <a href="{{ site.url }}/links" title="links" class="left-to-right">
+        <a href="{{ site.url }}/links" title="links" class="left-to-right" style="color: #64abe8;">
           <i class="fa fa-fw fa-link"></i>链接
         </a>
-        <a href="{{ site.url }}/tags" title="tags" class="left-to-right">
+        <a href="{{ site.url }}/tags" title="tags" class="left-to-right" style="color: #64abe8;">
           <i class="fa fa-fw fa-tag"></i>标签
         </a>
         <div class="post-title-section">
