--- a/_includes/overlay.html
+++ b/_includes/overlay.html
@@ -12,6 +12,9 @@
             {% unless item.completed %}
             <br><em>in progress</em>
             {% endunless %}
+            <br><em>
+            {{item.introduce}}
+            </em>
           </span>
         </a>
         </li>
