--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -76,11 +76,8 @@ layout: compress
         <a href="{{ site.url }}/projects" title="projects" class="left-to-right" style="color: #64abe8;">
           <i class="fa fa-fw fa-folder"></i>项目
         </a>
-        <a href="{{ site.url }}/links" title="links" class="left-to-right" style="color: #64abe8;">
-          <i class="fa fa-fw fa-link"></i>链接
-        </a>
-        <a href="{{ site.url }}/tags" title="tags" class="left-to-right" style="color: #64abe8;">
-          <i class="fa fa-fw fa-tag"></i>标签
+        <a href="{{ site.url }}/projects" title="projects" class="left-to-right">
+          <i class="fa fa-fw fa-diagram-project"></i>项目
         </a>
         <div class="post-title-section">
           <div class="section-line">Posts <em>/</em></div>
@@ -115,7 +112,6 @@ layout: compress
       </div>
     </div>
     {% include scripts.html %}
-    {% include overlay.html %}
   </div>
 </body>
 
