--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -74,11 +74,8 @@ layout: compress
         <a href="{{ site.url }}/projects" title="projects" class="left-to-right">
           <i class="fa fa-fw fa-folder"></i>项目
         </a>
-        <a href="{{ site.url }}/links" title="links" class="left-to-right">
-          <i class="fa fa-fw fa-link"></i>链接
-        </a>
-        <a href="{{ site.url }}/tags" title="tags" class="left-to-right">
-          <i class="fa fa-fw fa-tag"></i>标签
+        <a href="{{ site.url }}/projects" title="projects" class="left-to-right">
+          <i class="fa fa-fw fa-diagram-project"></i>项目
         </a>
         <h2 class="section-title">{{ page.title }}<em>/</em>
         </h2>
@@ -109,7 +106,6 @@ layout: compress
         </ul>
       </div>
     </div>
-    {% include overlay.html %}
     {% include scripts.html %}
   </div>
 </body>
