--- a/_includes/overlay.html
+++ b/_includes/overlay.html
@@ -1,23 +1,21 @@
-<div class="overlay">
-  <ul class="projects-menu">
+<div>
+  <ul style="list-style-type: none;padding-top: 10px;padding-left: 5%;">
     {% for item in site.data.projects %}
-      {% capture image %}{{ item.image }}{% endcapture %}
-      {% unless image contains 'http://' or image contains 'https://' %}
-      {% capture image %}{{ site.url }}/{{ image }}{% endcapture %}
-      {% endunless %}
-      <li style="background:url({{ image }}) center center no-repeat;">
-        <a href="{{ item.url }}" {% unless item.completed %}class="inactive"{% endunless %} target="_blank" rel="nofollow external">
-          <span>
-            {{ item.title }}
-            {% unless item.completed %}
-            <br><em>in progress</em>
-            {% endunless %}
-            <br><em>
+    
+      <li style="margin: 10px 0;">
+        <div style="margin:10px;border:10px solid #21252b;border-radius: 10px;width: 90%;padding-left: 5%;background-color: #21252b;">
+        <a href="{{ item.url }}">
+          
+            <h3>{{ item.title }}</h3>
+            <br>
+            <em>
             {{item.introduce}}
             </em>
-          </span>
+        
         </a>
+      </div>
         </li>
+      
     {% endfor %}
   </ul>
 </div>
