--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -77,7 +77,7 @@ layout: compress
           <i class="fa fa-fw fa-folder"></i>项目
         </a>
         <a href="{{ site.url }}/projects" title="projects" class="left-to-right">
-          <i class="fa fa-fw fa-diagram-project"></i>项目
+          <i class="fa fa-fw fa-box"></i>项目
         </a>
         <div class="post-title-section">
           <div class="section-line">Posts <em>/</em></div>
