--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -75,7 +75,7 @@ layout: compress
           <i class="fa fa-fw fa-folder"></i>项目
         </a>
         <a href="{{ site.url }}/projects" title="projects" class="left-to-right">
-          <i class="fa fa-fw fa-diagram-project"></i>项目
+          <i class="fa fa-fw fa-box"></i>项目
         </a>
         <h2 class="section-title">{{ page.title }}<em>/</em>
         </h2>
