--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -86,7 +86,7 @@ layout: compress
             <i class="fa fa-fw fa-tag"></i>标签
           </a>
           <a href="{{ site.url }}/projects" title="projects" class="left-to-right">
-            <i class="fa fa-fw fa-diagram-project"></i>项目
+            <i class="fa fa-fw fa-box"></i>项目
           </a>
 
           
